--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             
         <link rel="stylesheet" href="assets/dashboard.css">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">     
-        <script>
-        </script>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">  
     </head>
     <body>
       <div class="container">
+        <div class="accountcontainer">
+          
         <div class="tokencontainer">
           <h2>Upload token</h2>
           <div class="result-container">
-            <span id="tokenresult">zhxn_asasas</span>
-            <button class="btn" id="clipboard">
+            <span id="tokenresult">{{token}}</span>
+            <button type="button" class="btn" id="clipboard">
             <i class="far fa-clipboard"></i>
             </button>
           </div>
@@ -25,3 +25,4 @@
       <li><a href="/config" class="config">Config (admin)</a></li>
     </body>
 </html>
+
